Temporarily Fixed inline image

--- a/views/components/header.pug
+++ b/views/components/header.pug
@@ -19,7 +19,7 @@ mixin header(_page)
             href: "/" + (dev ? "index.html" : "index"),
             class: "navbar-title style-primary style-primary-dark-hover style-primary-focus"
           })
-            img.navbar-logo(src="/assets/gear-svg-icon-logo-color.svg" inline)
+            img.navbar-logo(src="/assets/gear-svg-icon-logo-color.svg")
             span.navbar-title-line
             span JOSEPH!
           section.layout-spacer
