--- a/views/app.pug
+++ b/views/app.pug
@@ -33,7 +33,7 @@ html(lang="en")
     meta(name='msapplication-TileColor', content='#4500ff')
     //- meta(name='msapplication-TileImage', content='/ms-icon-144x144.png')
 
-    link(rel="preload" href="https://polyfill.io/v3/polyfill.min.js?flags=gated&features=default%2Ces7%2CHTMLPictureElement%2CObject.values%2Cfetch%2CgetComputedStyle%2CrequestAnimationFrame%2Cdocument.getElementsByClassName%2CWebAnimations" as="script" async crossorigin="anonymous")
+    link(rel="preload" href="https://polyfill.io/v3/polyfill.min.js?flags=gated&features=default%2Ces7%2CHTMLPictureElement%2CObject.values%2Cfetch%2CgetComputedStyle%2CrequestAnimationFrame%2Cdocument.getElementsByClassName%2CWebAnimations%2Cperformance.now" as="script" async crossorigin="anonymous")
     link(rel="preload" href="https://fonts.gstatic.com/s/frankruhllibre/v5/j8_36_fAw7jrcalD7oKYNX0QfAnPU0PG9JnGhLeI.woff2" as="font" type="font/woff2" crossorigin="anonymous" async)
     link(rel="preload" href="https://fonts.gstatic.com/s/frankruhllibre/v5/j8_36_fAw7jrcalD7oKYNX0QfAnPUzPC9JnGhLeI.woff2" as="font" type="font/woff2" crossorigin="anonymous" async)
     link(rel="preload" href="https://fonts.gstatic.com/s/materialicons/v48/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2" as="font" type="font/woff2" crossorigin="anonymous" async)
@@ -163,15 +163,14 @@ html(lang="en")
           .layout-flex.layout-padding-horz
             section.layout-spacer
             section.layer-primary-dark.layer-shadow.layer-round
-              button#back-to-top.btn.btn-hover.layer-round.layout-padding-smaller.layer-primary-dark.layer-primary-hover.style-tertiary.style-hover-tertiary(tabindex='0', type='button')
+              button.back-to-top.btn.btn-hover.layer-round.layout-padding-smaller.layer-primary-dark.layer-primary-hover.style-tertiary.style-hover-tertiary(tabindex='0', type='button')
                 span.btn-group
                   i.icon.style-font-sz-24 expand_less
                   span.btn-section
                     span.btn-spacer
                     span.btn-content Back To Top
 
-              if page.noFooter
-                button.copyright-btn#swup.btn.btn-hover.layer-round.layout-padding-smaller.layer-primary-dark.layer-primary-hover.style-tertiary.style-hover-tertiary(tabindex='0', type='button')
+                button.copyright-btn.btn.btn-hover.layer-round.layout-padding-smaller.layer-primary-dark.layer-primary-hover.style-tertiary.style-hover-tertiary(tabindex='0', type='button')
                   span.btn-group.style-font-sz-24
                     i.icon copyright
                     span.btn-section
@@ -189,7 +188,7 @@ html(lang="en")
               h1.style-white.style-bold.layer-title.style-uppercase.layout-margin-dull-vert-top Coming SOON
               h5.style-white.style-line-height.style-capital.layer-content-detail This website is currently in development. We are working day and night to have it in tip top shape.
 
-    script(src='https://polyfill.io/v3/polyfill.min.js?flags=gated&features=default%2Ces7%2CHTMLPictureElement%2CObject.values%2Cfetch%2CgetComputedStyle%2CrequestAnimationFrame%2Cdocument.getElementsByClassName%2CWebAnimations' crossorigin='anonymous' async)
+    script(src='https://polyfill.io/v3/polyfill.min.js?flags=gated&features=default%2Ces7%2CHTMLPictureElement%2CObject.values%2Cfetch%2CgetComputedStyle%2CrequestAnimationFrame%2Cdocument.getElementsByClassName%2CWebAnimations%2Cperformance.now' crossorigin='anonymous' async)
     script(src=`${debug ? './js/app.modern.min.js' : './js/app.vendor.min.js'}` inline defer)
     if false
       script(src=`./js/store.min.js` inline defer)
