--- a/src/scss/components/transition.scss
+++ b/src/scss/components/transition.scss
@@ -10,6 +10,9 @@
     }
 }
 
+.permanent {
+    background-color: black !important;
+}
 // .layer {
     // transition: opacity .55s ease-out, transform .55s ease-out;
     // transform: translateY(55px);
