--- a/views/app.pug
+++ b/views/app.pug
@@ -163,14 +163,14 @@ html(lang="en")
           .layout-flex.layout-padding-horz
             section.layout-spacer
             section.layer-primary-dark.layer-shadow.layer-round
-              a.back-to-top.btn.btn-hover.layer-round.layout-padding-horz-smaller.layout-padding-vert-smallest.layer-primary-dark.layer-primary-hover.style-tertiary.style-hover-tertiary.style-focus-tertiary(tabindex='0')
+              a.back-to-top.btn.btn-hover.layer-round.layout-padding-horz-smaller.layout-padding-vert-smallest.layer-primary-dark.layer-primary-hover.style-tertiary.style-hover-tertiary.style-focus-tertiary(tabindex='0' href="#")
                 span.btn-group
                   i.icon.style-font-sz-24 expand_less
                   span.btn-section
                     span.btn-spacer
                     span.btn-content Back To Top
 
-                a.copyright-btn.btn.btn-hover.layer-round.layout-padding-horz-smaller.layout-padding-vert-smallest.layer-primary-dark.layer-primary-hover.style-tertiary.style-hover-tertiary.style-focus-tertiary(tabindex='0')
+                a.copyright-btn.btn.btn-hover.layer-round.layout-padding-horz-smaller.layout-padding-vert-smallest.layer-primary-dark.layer-primary-hover.style-tertiary.style-hover-tertiary.style-focus-tertiary(tabindex='0' href="#")
                   span.btn-group.style-font-sz-24
                     i.icon copyright
                     span.btn-section
