Event Delegation is the problem

--- a/views/components/hero.pug
+++ b/views/components/hero.pug
@@ -17,6 +17,6 @@ mixin hero(value)
               h1.style-font-title.layer-title.style-white.style-font-weight-bolder= _title
 
             section.layer-footer.layout-align-self-end
-              a.btn.layer-round.layout-padding-small.layer-tertiary.layer-shadow.layer-secondary-hover.style-secondary.style-hover-tertiary.layer-hero-scroll-down(tabindex='0' href="#")
+              button.btn.layer-round.layout-padding-small.layer-tertiary.layer-shadow.layer-secondary-hover.style-secondary.style-hover-tertiary.layer-hero-scroll-down
                 span.btn-group
                   i.icon.style-font-sz-36 expand_more
