--- a/views/components/header.pug
+++ b/views/components/header.pug
@@ -27,14 +27,14 @@ mixin header(_page)
             section.layout-inline-block
               //- +install
             section.layout-inline-block
-              button.navbar-menu.btn.layer-round.layout-padding-smaller.layer-transparent.layer-light-hover.style-primary(tabindex='-1', type='button' title="Menu Bar")
+              a.navbar-menu.btn.layer-round.layout-padding-smaller.layer-transparent.layer-light-hover.style-primary.style-hover-primary.style-focus-primary(title="Menu Bar")
                 span.btn-group
                   i.navbar-menu.icon.style-font-family-bold.style-font-sz-24 menu
 
         section.layout-spacer.navbar-desktop
         section.navbar-main
           //- .layout-flex.layout-align-items-center
-          ul.navbar-list#swup
+          ul.navbar-list
             each tab in _tabs
               - let _link = tab.a;
               - let _href = _link.href;
