--- a/src/scss/components/base.scss
+++ b/src/scss/components/base.scss
@@ -111,7 +111,7 @@ img {
 }
 
 .placeholder-img {
-    transition: opacity 2s ease;
+    transition: opacity .8s ease;
     // filter: blur(3px);
     opacity: 1;
 }
