--- a/views/app.pug
+++ b/views/app.pug
@@ -45,8 +45,9 @@ html(lang="en")
     link(rel='stylesheet' href='./css/app.min.css' inline async)
 
     //- link(rel="preload" href='./css/app.min.css' as="style" async)
-    link(rel="prefetch" href='https://polyfill.io/v3/polyfill.min.js?flags=gated&features=default%2Ces7%2CHTMLPictureElement%2CObject.values%2Cfetch%2CgetComputedStyle%2CrequestAnimationFrame%2Cdocument.getElementsByClassName%2CWebAnimations%2Cperformance.now' as="script" crossorigin)
+    //- link(rel="prefetch" href='https://polyfill.io/v3/polyfill.min.js?flags=gated&features=default%2Ces7%2CHTMLPictureElement%2CObject.values%2Cfetch%2CgetComputedStyle%2CrequestAnimationFrame%2Cdocument.getElementsByClassName%2CWebAnimations%2Cperformance.now' as="script" crossorigin)
     link(rel="prefetch" href='./js/app.modern.min.js' as="script")
+
     <!--[if lt IE 9]>
       script(src='https://cdnjs.cloudflare.com/ajax/libs/nwmatcher/1.4.2/nwmatcher.min.js' async)
       script(src='https://cdnjs.cloudflare.com/ajax/libs/json2/20160511/json2.min.js' async)
