--- a/views/app.pug
+++ b/views/app.pug
@@ -5,7 +5,8 @@ html(lang="en")
     meta(http-equiv="Content-Type", content="text/html; charset=utf-8")
     meta(http-equiv='Accept-CH' content='DPR, Viewport-Width, Width')
     meta(http-equiv='Cache-Control' content='public, max-age=31536000')
-    meta(http-equiv='Content-Security-Policy' content=`default-src https: 'self'; font-src data: 'self' https://fonts.gstatic.com/; style-src 'self' 'unsafe-inline'; img-src data: 'self' https://res.cloudinary.com/${cloud_name}/; script-src https://polyfill.io/ https://cdnjs.cloudflare.com/ 'self' 'unsafe-inline' 'unsafe-eval'; connect-src 'self' ${dev ? "* blob: ws:" : ""}; upgrade-insecure-requests`)
+    meta(http-equiv='Content-Security-Policy' content=`default-src https: 'self'; font-src data: 'self' https://fonts.gstatic.com/; style-src 'self' 'unsafe-inline'; img-src data: 'self' https://res.cloudinary.com/${cloud_name}/; script-src https://polyfill.io/ https://cdnjs.cloudflare.com/ 'self' 'unsafe-inline' 'unsafe-eval'; connect-src 'self' ${dev ? '* blob: ws:' : ''}; upgrade-insecure-requests`)
+
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     meta(name='Description' content='The porfolio of Joseph, it contains all amazing projects etc...')
 
@@ -46,7 +47,7 @@ html(lang="en")
 
     //- link(rel="preload" href='./css/app.min.css' as="style" async)
     //- link(rel="prefetch" href='https://polyfill.io/v3/polyfill.min.js?flags=gated&features=default%2Ces7%2CHTMLPictureElement%2CObject.values%2Cfetch%2CgetComputedStyle%2CrequestAnimationFrame%2Cdocument.getElementsByClassName%2CWebAnimations%2Cperformance.now' as="script" crossorigin)
-    link(rel="prefetch" href='./js/app.modern.min.js' as="script")
+    link(rel="preload" href='./js/app.modern.min.js' as="script")
 
     <!--[if lt IE 9]>
       script(src='https://cdnjs.cloudflare.com/ajax/libs/nwmatcher/1.4.2/nwmatcher.min.js' async)
