Fixed navbar bug

--- a/views/components/header.pug
+++ b/views/components/header.pug
@@ -29,7 +29,7 @@ mixin header(_page)
             section.layout-inline-block
               a.navbar-menu.btn.layer-round.layout-padding-smaller.layer-transparent.layer-light-hover.style-primary.style-hover-primary.style-focus-primary(title="Menu Bar")
                 span.btn-group
-                  i.navbar-menu.icon.style-font-family-bold.style-font-sz-24 menu
+                  i.icon.style-font-family-bold.style-font-sz-24 menu
 
         section.layout-spacer.navbar-desktop
         section.navbar-main
