--- a/views/components/content.pug
+++ b/views/components/content.pug
@@ -7,23 +7,23 @@ mixin image(value)
     .load-img
       .img-contain
         picture
-          source(media='(max-width: 500px)' srcset!=`${_src}.webp?w=500&quality=70` type='image/webp')
-          source(media='(max-width: 500px)' srcset!=`${_src}.jpg?w=500&quality=70` type='image/jpeg')
+          source(media='(max-width: 500px)' srcset!=`${_src}.webp?w=500&quality=70` sizes="(max-width: 500px) 500w" type='image/webp')
+          source(media='(max-width: 500px)' srcset!=`${_src}.jpg?w=500&quality=70` sizes="(max-width: 500px) 500w" type='image/jpeg')
 
-          source(media='(max-width: 700px)' srcset!=`${_src}.webp?w=700` type='image/webp')
-          source(media='(max-width: 700px)' srcset!=`${_src}.jpg?w=700` type='image/jpeg')
+          source(media='(max-width: 700px)' srcset!=`${_src}.webp?w=700` sizes="(max-width: 700px) 700w" type='image/webp')
+          source(media='(max-width: 700px)' srcset!=`${_src}.jpg?w=700` sizes="(max-width: 700px) 700w" type='image/jpeg')
 
-          source(media='(max-width: 900px)' srcset!=`${_src}.webp?w=900` type='image/webp')
-          source(media='(max-width: 900px)' srcset!=`${_src}.jpg?w=900` type='image/jpeg')
+          source(media='(max-width: 900px)' srcset!=`${_src}.webp?w=900` sizes="(max-width: 900px) 900w" type='image/webp')
+          source(media='(max-width: 900px)' srcset!=`${_src}.jpg?w=900` sizes="(max-width: 900px) 900w" type='image/jpeg')
 
-          source(media='(min-width: 900px)' srcset!=`${_src}.webp` type='image/webp')
-          img.core-img(src!=`${_src}.jpg` alt=_alt loading="lazy" width="auto")
+          source(media='(min-width: 900px)' srcset!=`${_src}.webp` sizes="100vw" type='image/webp')
+          img.core-img(src!=`${_src}.jpg` alt=_alt loading="lazy" sizes="(max-width: 500px) 500w,(max-width: 700px) 700w,(max-width: 900px) 900w, 100vw")
 
-          //- img.core-img(src!=`${_src}.jpg?w=50&quality=100&effect=blur:150`, alt=_alt inline loading="auto")
+          //- img.core-img(src!=`${_src}.jpg?w=50&quality=100&effect=blur:150` sizes="50w" alt=_alt inline loading="auto")
         picture
-          img.placeholder-img(src!=`${_src}.jpg?w=50&quality=100&effect=blur:150`, width="50" alt=_alt inline="inline" loading="auto")
+          img.placeholder-img(src!=`${_src}.jpg?w=50&quality=100&effect=blur:150` sizes="50w" alt=_alt inline="inline" loading="auto")
         noscript Javascript is necesscary for an amazing experience.
-          img.core-img(src!=`${_src}.jpg` alt=_alt loading="lazy" width="auto")
+          img.core-img(src!=`${_src}.jpg` alt=_alt loading="lazy" width="100vw")
     .layer-image-overlay
 
 
