--- a/views/components/hero.pug
+++ b/views/components/hero.pug
@@ -19,4 +19,4 @@ mixin hero(value)
             section.layer-footer.layout-align-self-end
               a.btn.layer-round.layout-padding-small.layer-tertiary.layer-shadow.layer-secondary-hover.layer-tertiary-dark-focus.style-secondary.style-hover-tertiary.layer-hero-scroll-down
                 span.btn-group
-                  i.icon.style-font-sz-36 expand_more
+                  i.icon.style-font-sz-36(inline) expand_more
