--- a/views/app.pug
+++ b/views/app.pug
@@ -41,7 +41,7 @@ html(lang="en")
     meta(name='msapplication-TileImage', content='/ms-icon-144x144.png')
 
     link(rel="preload" href="https://fonts.gstatic.com/s/frankruhllibre/v5/j8_36_fAw7jrcalD7oKYNX0QfAnPUzPC9JfGhA.woff2" as="font" type="font/woff2" crossorigin)
-    link(rel="preload" href="https://fonts.gstatic.com/s/materialicons/v48/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2" as="font" type="font/woff2" crossorigin)
+    //- link(rel="preload" href="https://fonts.gstatic.com/s/materialicons/v48/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2" as="font" type="font/woff2" crossorigin)
     link(rel="preload" href="https://fonts.gstatic.com/s/montserrat/v14/JTURjIg1_i6t8kCHKm45_dJE3gnD_g.woff2" as="font" type="font/woff2" crossorigin)
     link(rel="preload" href="https://fonts.gstatic.com/s/montserrat/v14/JTURjIg1_i6t8kCHKm45_c5H3gnD_g.woff2" as="font" type="font/woff2" crossorigin)
     link(rel="preload" href="https://fonts.gstatic.com/s/roboto/v20/KFOmCnqEu92Fr1Mu4mxK.woff2" as="font" type="font/woff2" crossorigin)
@@ -170,14 +170,14 @@ html(lang="en")
             section.layer-primary-dark.layer-shadow.layer-round
               button.back-to-top.btn.btn-hover.layer-round.layout-padding-horz-smaller.layout-padding-vert-smallest.layer-primary-dark.layer-primary-hover.layer-primary-focus.style-tertiary.style-hover-tertiary.style-focus-tertiary
                 span.btn-group
-                  i.icon.style-font-sz-24 expand_less
+                  i.icon.style-font-sz-24(inline) expand_less
                   span.btn-section
                     span.btn-spacer
                     span.btn-content Back To Top
 
                 button.copyright-btn.btn.btn-hover.layer-round.layout-padding-horz-smaller.layout-padding-vert-smallest.layer-primary-dark.layer-primary-hover.layer-primary-focus.style-tertiary.style-hover-tertiary.style-focus-tertiary
                   span.btn-group.style-font-sz-24
-                    i.icon copyright
+                    i.icon(inline) copyright
                     span.btn-section
                       span.btn-spacer
                       span.btn-content 2019 Okiki Ojo
