--- a/views/components/content.pug
+++ b/views/components/content.pug
@@ -17,11 +17,11 @@ mixin image(value)
           source(media='(max-width: 900px)' srcset!=`${_src}.jpg?w=900` sizes="(max-width: 900px) 900w" type='image/jpeg')
 
           source(media='(min-width: 900px)' srcset!=`${_src}.webp` sizes="100vw" type='image/webp')
-          img.core-img(src!=`${_src}.jpg` alt=_alt loading="lazy" sizes="(max-width: 500px) 500w,(max-width: 700px) 700w,(max-width: 900px) 900w, 100vw")
+          img.core-img(src!=`${_src}.jpg` alt=_alt loading="lazy" sizes="(max-width: 500px) 500w,(max-width: 700px) 700w,(max-width: 900px) 900w, 100vw" width="100vw")
 
           //- img.core-img(src!=`${_src}.jpg?w=50&quality=100&effect=blur:150` sizes="50w" alt=_alt inline loading="auto")
         picture
-          img.placeholder-img(src!=`${_src}.jpg?w=50&quality=100&effect=blur:150` sizes="50w" alt=_alt inline loading="auto")
+          img.placeholder-img(src!=`${_src}.jpg?w=50&quality=100&effect=blur:150` sizes="50w" alt=_alt inline loading="auto" width="50w")
         noscript Javascript is necesscary for an amazing experience.
           img.core-img(src!=`${_src}.jpg` alt=_alt loading="lazy" width="100vw")
     .layer-image-overlay
