Banners, Scrolling Effect, and JS

--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -6,7 +6,7 @@
     display: block;
 
     &-top-spot {
-        height: $height + $size;
+        margin-top: $height + $size;
     }
 
     /* -- Navigation -- */
