--- a/views/app.pug
+++ b/views/app.pug
@@ -139,8 +139,7 @@ html(lang="en")
                 - let section = sections.section;
                   +sectionView(section)
 
-      .header-top-spot
-      main.main#swup.transition-fade
+      main.main
         - let layerLists = page.values;
 
         //- Page Layers
@@ -150,7 +149,7 @@ html(lang="en")
             - let hero = layers.hero; //- Display Hero Layer if it exists
 
             if typeof hero == "object"
-              +hero(hero)
+              +hero(hero, page.banner)
 
             if typeof layer == "object"
               - let layout = layer.layout;
@@ -193,7 +192,7 @@ html(lang="en")
               h1.style-white.style-bold.layer-title.style-uppercase.layout-margin-dull-vert-top Coming SOON
               h5.style-white.style-line-height.style-capital.layer-content-detail This website is currently in development. We are working day and night to have it in tip top shape.
 
-    script(src='https://polyfill.io/v3/polyfill.min.js?flags=gated&features=default%2Ces7%2CHTMLPictureElement%2CObject.values%2Cfetch%2CgetComputedStyle%2CrequestAnimationFrame%2Cdocument.getElementsByClassName%2CWebAnimations%2Cperformance.now' crossorigin async)
+    script(src='https://polyfill.io/v3/polyfill.min.js?flags=gated&features=default%2Ces7%2CHTMLPictureElement%2CObject.values%2Cfetch%2CgetComputedStyle%2CrequestAnimationFrame%2Cdocument.getElementsByClassName%2CWebAnimations%2Cperformance.now%2CIntersectionObserver' crossorigin async)
     script(src=`${debug ? './js/app.modern.min.js' : './js/app.vendor.min.js'}` inline async)
     if false
       script(src=`./js/store.min.js` inline defer)
