--- a/src/scss/components/layer.scss
+++ b/src/scss/components/layer.scss
@@ -42,7 +42,7 @@
         }
 
         &-overlay {
-            background: darken($primary-dark, 20%);
+            background: darken(#53507c, 20%);
             position: absolute;
             display: block;
             opacity: 0.15;
