--- a/views/app.pug
+++ b/views/app.pug
@@ -2,13 +2,34 @@ doctype html
 html(lang="en")
   head
     meta(charset='utf-8')
-    meta(http-equiv="Content-Type", content="text/html; charset=utf-8")
+    meta(http-equiv='X-UA-Compatible' content='IE=edge,chrome=1')
     meta(http-equiv='Accept-CH' content='DPR, Viewport-Width, Width')
+    meta(http-equiv="Content-Type", content="text/html; charset=utf-8")
     meta(http-equiv='Cache-Control' content='public, s-max-age=31536000')
-    meta(http-equiv='Content-Security-Policy' content=`default-src https: 'self'; font-src data: 'self' https://fonts.gstatic.com/; style-src 'self' 'unsafe-inline'; img-src data: 'self' https://res.cloudinary.com/${cloud_name}/; script-src https://polyfill.io/ https://cdnjs.cloudflare.com/ 'self' 'unsafe-inline' 'unsafe-eval'; connect-src 'self' ${dev ? '* blob: ws:' : ''}; upgrade-insecure-requests`)
+    meta(http-equiv='Content-Security-Policy' content=`default-src https: 'self'; font-src data: 'self' https://fonts.gstatic.com/; style-src 'self' 'unsafe-inline'; img-src data: 'self' https://res.cloudinary.com/${cloud_name}/ https://www.josephojo.com/; 
+    script-src https://polyfill.io/ https://cdnjs.cloudflare.com/ 'self' 'unsafe-inline' 'unsafe-eval'; connect-src 'self' ${dev ? "* blob: ws:" : ""}; upgrade-insecure-requests`)
 
+    meta(name='robots' content='all')
+    meta(name='title' content=page.title)
+    meta(name='DC.title' content=page.title)
+    meta(name='HandheldFriendly' content='true')
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    meta(name='Description' content='The porfolio of Joseph, it contains all amazing projects etc...')
+    meta(name='shortlink' content=`https://www.josephojo.com/${page.name}`)
+    meta(name='canonical' content=`https://www.josephojo.com/${page.name}`)
+    meta(name='keywords' content='Joseph Ojo, josephojo, josephojo.com, joseph, ojo, portfolio, engineer, web, mechatronics, website, netlify')
+
+    meta(property='og:type' content='website')
+    meta(property='article:author' content='Joseph Ojo')
+    meta(property='og:site_name' content='josephojo.com')
+    meta(property='og:title' content=`${page.title} - josephojo.com`)
+    meta(property='og:url' content=`https://www.josephojo.com/${page.name}`)
+
+    meta(itemprop='name' content=`${page.title} - josephojo.com`)
+    meta(itemprop='image' content='https://www.josephojo.com/android-icon-192x192.png')
+    meta(name='description' content='The porfolio of Joseph, it contains all amazing projects etc...')
+    meta(itemprop='description' content='The porfolio of Joseph, it contains all amazing projects etc...')
+    meta(property='og:description' content='The porfolio of Joseph, it contains all amazing projects etc...')
+    title= page.title
 
     link(rel='preconnect' href=`https://res.cloudinary.com/${cloud_name}/` crossorigin)
     link(rel='preconnect' href='https://fonts.gstatic.com/' crossorigin)
@@ -25,9 +46,9 @@ html(lang="en")
     link(rel='apple-touch-icon', sizes='152x152', href='/apple-icon-152x152.png')
     link(rel='apple-touch-icon', sizes='180x180', href='/apple-icon-180x180.png')
 
-    link(rel="prefetch" href="manifest.webmanifest" as="fetch" crossorigin)
-    link(rel="prefetch" href="/favicon-32x32.png" as="image" crossorigin)
-    link(rel="prefetch" href="/android-icon-144x144.png" as="image" crossorigin)
+    //- link(rel="prefetch" href="manifest.webmanifest" as="fetch" crossorigin)
+    //- link(rel="prefetch" href="/favicon-32x32.png" as="image" crossorigin)
+    //- link(rel="prefetch" href="/android-icon-144x144.png" as="image" crossorigin)
 
     link(rel='icon', type='image/png', sizes='512x512', href='/android-icon-512x512.png')
     link(rel='icon', type='image/png', sizes='192x192', href='/android-icon-192x192.png')
@@ -35,20 +56,22 @@ html(lang="en")
     link(rel='icon', type='image/png', sizes='96x96', href='/favicon-96x96.png')
     link(rel='icon', type='image/png', sizes='16x16', href='/favicon-16x16.png')
     link(rel='manifest', href='manifest.webmanifest')
+    link(rel='home', href='https://www.josephojo.com/')
 
     meta(name='theme-color', content='#4500ff')
     meta(name='msapplication-TileColor', content='#4500ff')
     meta(name='msapplication-TileImage', content='/ms-icon-144x144.png')
 
     link(rel="preload" href="https://fonts.gstatic.com/s/frankruhllibre/v5/j8_36_fAw7jrcalD7oKYNX0QfAnPUzPC9JfGhA.woff2" as="font" type="font/woff2" crossorigin)
-    //- link(rel="preload" href="https://fonts.gstatic.com/s/materialicons/v48/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2" as="font" type="font/woff2" crossorigin)
     link(rel="preload" href="https://fonts.gstatic.com/s/montserrat/v14/JTURjIg1_i6t8kCHKm45_dJE3gnD_g.woff2" as="font" type="font/woff2" crossorigin)
     link(rel="preload" href="https://fonts.gstatic.com/s/montserrat/v14/JTURjIg1_i6t8kCHKm45_c5H3gnD_g.woff2" as="font" type="font/woff2" crossorigin)
     link(rel="preload" href="https://fonts.gstatic.com/s/roboto/v20/KFOmCnqEu92Fr1Mu4mxK.woff2" as="font" type="font/woff2" crossorigin)
-    link(rel="preload" href="https://fonts.gstatic.com/s/varelaround/v12/w8gdH283Tvk__Lua32TysjIfp8uP.woff2" as="font" type="font/woff2" crossorigin)
+    link(rel="prefetch" href="https://fonts.gstatic.com/s/varelaround/v12/w8gdH283Tvk__Lua32TysjIfp8uP.woff2" as="font" type="font/woff2" crossorigin)
 
     link(rel='stylesheet' href='./css/app.min.css' inline async)
+    script(src='https://polyfill.io/v3/polyfill.min.js?flags=gated&features=default%2Ces7%2CHTMLPictureElement%2CObject.values%2Cfetch%2CgetComputedStyle%2CrequestAnimationFrame%2Cdocument.getElementsByClassName%2CWebAnimations%2Cperformance.now%2CIntersectionObserver' crossorigin async)
 
+      //- link(rel="preload" href="https://fonts.gstatic.com/s/materialicons/v48/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2" as="font" type="font/woff2" crossorigin)
     //- link(rel="preload" href='./css/app.min.css' as="style" async)
     //- link(rel="prefetch" href='https://polyfill.io/v3/polyfill.min.js?flags=gated&features=default%2Ces7%2CHTMLPictureElement%2CObject.values%2Cfetch%2CgetComputedStyle%2CrequestAnimationFrame%2Cdocument.getElementsByClassName%2CWebAnimations%2Cperformance.now' as="script" crossorigin)
     //- link(rel="preload" href='./js/app.modern.min.js' as="script")
@@ -109,8 +132,6 @@ html(lang="en")
     //- link(rel='dns-prefetch' href='https://fonts.googleapis.com')
     //- link(rel='stylesheet' async href='https://fonts.googleapis.com/css?family=Frank+Ruhl+Libre:500,900|Varela+Round:400|Montserrat:700,800|Roboto:400,600|Material+Icons&display=swap')
 
-    title= page.title
-
     include ./components/header.pug
     include ./components/layer.pug
     include ./components/layout.pug
@@ -118,8 +139,20 @@ html(lang="en")
     include ./components/hero.pug
     include ./components/footer.pug
   body
-    //- dev
-    if true
+    div(itemscope='' itemtype='https://schema.org/Article' style="display: none" hidden)
+      meta(itemprop='url' content=`https://www.josephojo.com/${page.name}`)
+      span(itemprop='name' content=`${page.title} - josephojo.com`)
+        | by 
+        span(itemprop='author') Joseph Ojo
+          div(itemscope='' itemtype='https://schema.org/Person')
+            img(itemprop='image' src='https://www.josephojo.com/android-icon-192x192.png' alt='The logo for josephojo.com')
+            span(itemprop="email") laoluojo@gmail.com
+            span(itemprop='description')
+              | The porfolio of Joseph, it contains all amazing projects etc...
+            span(itemtype='https://schema.org/EducationalOrganization' itemprop="alumniOf")
+              | OnTech - Ontario Tech University
+            a(href='https://www.linkedin.com/in/o-josephojo/' itemprop='url') linkedin 
+    if dev
       //- Navbar etc...
       +header(page)
 
@@ -192,7 +225,6 @@ html(lang="en")
               h1.style-white.style-bold.layer-title.style-uppercase.layout-margin-dull-vert-top Coming SOON
               h5.style-white.style-line-height.style-capital.layer-content-detail This website is currently in development. We are working day and night to have it in tip top shape.
 
-    script(src='https://polyfill.io/v3/polyfill.min.js?flags=gated&features=default%2Ces7%2CHTMLPictureElement%2CObject.values%2Cfetch%2CgetComputedStyle%2CrequestAnimationFrame%2Cdocument.getElementsByClassName%2CWebAnimations%2Cperformance.now%2CIntersectionObserver' crossorigin async)
     script(src=`${debug ? './js/app.modern.min.js' : './js/app.vendor.min.js'}` inline async)
     if false
       script(src=`./js/store.min.js` inline defer)
