--- a/views/app.pug
+++ b/views/app.pug
@@ -152,7 +152,8 @@ html(lang="en")
             span(itemtype='https://schema.org/EducationalOrganization' itemprop="alumniOf")
               | OnTech - Ontario Tech University
             a(href='https://www.linkedin.com/in/o-josephojo/' itemprop='url') linkedin 
-    if dev
+    if true
+      //- dev
       //- Navbar etc...
       +header(page)
 
