--- a/views/components/hero.pug
+++ b/views/components/hero.pug
@@ -10,7 +10,7 @@ mixin hero(value, banner)
       .layer-hero(class=`${!banner ? "header-top-spot" : 'banner-mode'}`)
         +image(_image)
 
-        section.layout-enlarge.layout-flex.layout-align-items-center.layout-justify-content-center
+        section.layout-enlarge.layout-flex.layout-align-items-center.layout-justify-content-center.layout-padding-vert-resize-desktop
           .layer-content.style-center
             section.layer-header
               h1.style-font-title.layer-title.style-white.style-font-weight-bolder= _title
